# raggit

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 22c7a9a62523_add_chunk_links_and_word_count.py  27b1f434b86b_add_document_file_stat_snapshot.py  319a472d5583_initial_schema.py  50b84197f9d2_add_retrieval_and_chunk_metadata_fields.py  d715f71dd3f7_add_chunk_foreign_key.py
raggit/api/: models.py
raggit/cli/: __init__.py  _env.py  ingest_cmd.py  main.py  options.py  query_cmd.py  serve_cmd.py  setup_cmd.py  status_cmd.py  tui.py  watch_cmd.py
raggit/core/: audit.py  config.py  logging.py  watcher.py
raggit/db/: models.py  repository.py  session.py  vector.py
raggit/ingestion/: chunker.py  cleaner.py  embedder.py  indexer.py  injection.py  parser.py  pii.py
raggit/llm/: augmenter.py  base.py  factory.py  ollama.py  openai.py
raggit/retrieval/: engine.py  reranker.py  rewrite.py  rrf.py  safety.py
raggit/storage/: azure.py  base.py  factory.py  gcs.py  local.py  s3.py
src/: __init__.py
src/cli/: main.py  tui.py
src/core/: config.py
src/db/: models.py  repository.py  session.py  vector.py
src/ingestion/: chunker.py  embedder.py  indexer.py  parser.py
src/llm/: ollama.py  openai.py
src/raggit/api/: models.py
src/raggit/core/: config.py
src/raggit/db/: base.py  models.py  repository.py
src/raggit/ingestion/: cleaner.py  embedder.py
src/raggit/llm/: __init__.py  augmenter.py  ollama.py  openai.py
src/raggit/retrieval/: rrf.py  sanitizer.py
src/raggit/storage/: __init__.py  base.py  factory.py
src/retrieval/: __init__.py  engine.py
src/storage/: local.py
tests/: test_audit.py  test_chunker.py  test_cleaner.py  test_cli.py  test_indexer_pairs.py  test_injection.py  test_local_storage.py  test_pii.py  test_retrieval_engine.py  test_rewrite.py  test_rrf.py  test_safety.py  test_sanitizer.py  test_storage_azure.py  test_storage_factory.py  test_storage_gcs.py  test_storage_s3.py  test_watcher_service.py
