[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raggit"
version = "0.1.0"
description = "Plug-and-play production-grade RAG system"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "raggit contributors" },
]
keywords = ["rag", "retrieval", "ai", "qdrant", "postgres"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "qdrant-client>=1.12.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sentence-transformers>=3.3.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "watchdog>=6.0.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
s3 = ["aiobotocore>=2.0"]
gcs = ["google-cloud-storage>=2.0"]
azure = ["azure-storage-blob>=12.0"]
cloud = ["raggit[s3,gcs,azure]"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "aiobotocore>=2.0",
    "google-cloud-storage>=2.0",
    "azure-storage-blob>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "aiobotocore>=2.0",
    "google-cloud-storage>=2.0",
    "azure-storage-blob>=12.0",
]

[project.scripts]
raggit = "raggit.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["raggit*"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"raggit/cli/**/*.py" = ["B008"]  # typer uses callables as argument defaults

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "aiobotocore.*",
    "botocore.*",
    "google.cloud.storage",
    "google.oauth2.service_account",
    "azure.storage.blob.aio",
    "azure.storage.blob",
    "fitz",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
